remove copy of resource to special folder fix folders not being detected as packs